<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/amber_play_bar_current_song_height">

        <Button
            android:layout_width="@dimen/material_icon"
            android:layout_height="@dimen/material_icon"
            android:background="@drawable/ic_magnify"
            android:id="@+id/play_bar_search_button"
            android:layout_gravity="center_vertical" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="@dimen/amber_play_bar_current_song_text_view_top_padding"
            android:paddingLeft="@dimen/amber_icon_padding"
            android:paddingRight="@dimen/amber_icon_padding"
            android:orientation="horizontal">

            <TextView
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:hint="@string/play_bar_current_song_text_view_placeholder"
                android:id="@+id/play_bar_current_song_text_view"
                android:visibility="visible"
                android:textSize="@dimen/material_hint_and_input_text"
                android:gravity="center_vertical">
            </TextView>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"
                android:id="@+id/play_bar_search_edit_text"
                android:textSize="@dimen/material_hint_and_input_text"
                android:inputType="text" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="@dimen/material_icon"
            android:layout_height="@dimen/material_icon"
            android:background="@drawable/ic_skip_previous"
            android:id="@+id/play_bar_skip_previous_button"
            android:layout_gravity="center_vertical" />

        <Button
            android:layout_width="@dimen/material_icon"
            android:layout_height="@dimen/material_icon"
            android:id="@+id/play_bar_play_button"
            android:background="@drawable/ic_play"
            android:layout_gravity="center_vertical" />


        <Button
            android:layout_width="@dimen/material_icon"
            android:layout_height="@dimen/material_icon"
            android:background="@drawable/ic_skip_next"
            android:id="@+id/play_bar_skip_next_button"
            android:layout_gravity="center_vertical"
            />

        <Button
            android:layout_width="@dimen/material_icon"
            android:layout_height="@dimen/material_icon"
            android:background="@drawable/ic_shuffle"
            android:id="@+id/play_bar_shuffle_button"
            android:layout_gravity="center_vertical"
            />

        <Button
            android:layout_width="@dimen/material_icon"
            android:layout_height="@dimen/material_icon"
            android:background="@drawable/ic_repeat"
            android:id="@+id/play_bar_repeat_button"
            android:layout_gravity="center_vertical"
            />

        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/play_bar_seek_bar"
            android:layout_gravity="center_vertical" />

    </LinearLayout>
</LinearLayout>